--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>寄送郵件表單</title>
 </head>
 <body>
-    <h1>聯絡我們+右下客服</h1>
+    <h1>聯絡我們+右下客服1</h1>
 <!-- modify this form HTML and place wherever you want your form -->
 <form action="https://formspree.io/f/mnqkpqjb" method="post">
         <label for="name">姓名：</label>
@@ -26,10 +26,7 @@
     <!-- Your 洽談外掛程式 code -->
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
-
-   
-	</body>
-	 <script>
+ <script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "281447731965073");
       chatbox.setAttribute("attribution", "biz_inbox");
@@ -52,4 +49,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
+   
+	</body>
+	
 </html>
