--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>寄送郵件表單</title>
 </head>
 <body>
-    <h1>聯絡我們+右下客服1</h1>
+    <h1>聯絡我們+右下客服</h1>
 <!-- modify this form HTML and place wherever you want your form -->
 <form action="https://formspree.io/f/mnqkpqjb" method="post">
         <label for="name">姓名：</label>
