--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>寄送郵件表單</title>
+    <title>粉絲團線上服務</title>
 </head>
 <body>
-    <h1>聯絡我們+粉絲團數位服務</h1>
+    <h1>聯絡我們+粉絲團線上服務</h1>
 <!-- form -->
 <form id="my-form" action="https://formspree.io/f/mnqkpqjb" method="post">
         <label for="name">姓名：</label>
@@ -13,9 +13,6 @@
         <label for="email">e-mail：</label>
         <input type="email" id="email" name="email" required><br><br>
 
-    <label for="file">文件上傳：</label>
-    <input type="file" name="upload"> <br><br>
-	
         <label for="message">內容：</label><br>
         <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
         
